2023-07-28T08:09:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5689727404 # 1047
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 4 4133
* notice: prev accum: outdated-unq outdated-all / unq all: 1572 143434 / 1604 147617
* notice: next accum: outdated-unq outdated-all / unq all: 1572 143434 / 1608 147732
* notice: prev exec diff / last date diff / accum: unq all: +4 +115 -0 -134 / +4 +115 -0 -0 / 4 115
* notice: removed / changed dates: [] / [2023-07-14 2023-07-28]

2023-07-28T00:41:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5686872157 # 1046
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 3 4152
* notice: prev accum: outdated-unq outdated-all / unq all: 1569 143136 / 1604 147524
* notice: next accum: outdated-unq outdated-all / unq all: 1572 143434 / 1604 147617
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -1 -31 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-07-13] / [2023-07-14 2023-07-27]

2023-07-27T16:09:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5682897337 # 1045
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 3 4130
* notice: prev accum: outdated-unq outdated-all / unq all: 1569 143136 / 1604 147429
* notice: next accum: outdated-unq outdated-all / unq all: 1569 143136 / 1604 147524
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -92 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-07-13 2023-07-27]

2023-07-27T08:10:13Z: