@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-28T08:09:56Z",
-  "count" : 132,
-  "count_minmax" : [ 110, 297 ],
-  "count_decinc" : [ -165, +297 ],
+  "timestamp" : "2023-07-28T16:09:38Z",
+  "count" : 40,
+  "count_minmax" : [ 40, 297 ],
+  "count_decinc" : [ -257, +297 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
