@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-28T08:09:56Z",
+  "timestamp" : "2023-07-28T16:09:38Z",
   "count_outdated" : 143434,
   "uniques_outdated" : 1572,
-  "count" : 147732,
-  "uniques" : 1608,
+  "count" : 147827,
+  "uniques" : 1609,
   "clones" : [
     {
       "timestamp": "2023-07-14T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 110, 297 ],
-      "count_decinc": [ 165, 297 ],
+      "count": 40,
+      "count_minmax": [ 40, 297 ],
+      "count_decinc": [ 257, 297 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 115,
-      "count_minmax": [ 115, 115 ],
-      "count_decinc": [ 0, 115 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 210,
+      "count_minmax": [ 115, 210 ],
+      "count_decinc": [ 0, 210 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
