@@ -1,3 +1,12 @@
+2023-07-28T16:09:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5693992320 # 1048
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
+* notice: last 14d: unq all: 5 4136
+* notice: prev accum: outdated-unq outdated-all / unq all: 1572 143434 / 1608 147732
+* notice: next accum: outdated-unq outdated-all / unq all: 1572 143434 / 1609 147827
+* notice: prev exec diff / last date diff / accum: unq all: +1 +95 -0 -92 / +5 +210 -0 -0 / 5 210
+* notice: removed / changed dates: [] / [2023-07-14 2023-07-28]
+
 2023-07-28T08:09:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5689727404 # 1047
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
